# krabascript

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  LICENSE  README.md  compile_commands.json  examples.ks  krabascript  ks-install.cmd  ks-uninstall.cmd  test.ks
.cache/clangd/index/: colors.h.280EF033CD143E0D.idx  easyargs.h.46A21FA677441C61.idx  krabascript.h.B3C5AE07767DD6BC.idx  ksconf.h.1BB59CCCF0F6444E.idx  main.c.7B552DF181675BA3.idx  parser.c.59921B76F22657B1.idx  parser.h.445AC5788F827978.idx  strings.c.8CF33608B4217823.idx  strings.h.354454945B3FAF96.idx  tokenizer.c.A9035FF1E762E4DC.idx  tokenizer.h.420927E4C97723BB.idx
DOCUMENTATION/: 1 Variables.md
examples/: print.ks
include/: colors.h  easyargs.h  krabascript.h  ksconf.h  parser.h  preprocessor.h  strings.h  tokenizer.h  zipper.h
source/: krabascript.c  main.c  main.cpp  parser.c  preprocessor.c  strings.c  tokenizer.c
src/: main.cpp
src/ks compiler/: main.cpp
src/ksc/: main.cpp  parser.h
src/ksm/: main.cpp
